2020-06-20  Keith Marshall  <keith@users.osdn.me>

	Simplify numeric argument interpreter function.

	* src/clistub.c (xatoi) [input != NULL]: Delegate to...
	(strtol): ...this standard library function; hence delete redundant
	local implementation, within the NULL pointer rejection guard.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Accommodate C++11 string constant conflation limitations.

	* src/dllhook.cpp (MSG_INTERNAL_ERROR)
	* src/pkgexec.cpp (LUA_LIBEXEC_PATH): Insert white space, to separate
	adjacent string constants in conflated text.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Force "C" linkage for setup key definitions.

	* src/setup.cpp (uri_key, mirror_key, value_none): Wrap them...
	(BEGIN_C_DECLS, END_C_DECLS): ...between these.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Support all-static linking with recent GCC versions.

	* Makefile.in (LDFLAGS): Add "-static" unconditionally.
	(LIBS, SETUP_TOOL_LIBS): Remove all "-Wl,-Bstatic" and "-Wl,-Bdynamic"
	references; the latter, in particular, appears to induce dynamic
	linking of libstdc++-6.dll, overriding "--static-libstdc++".

2020-06-12  Keith Marshall  <keith@users.osdn.me>

	Use XML templates to adapt to download host changes.

	* configure.ac (MINGW_PACKAGE_DIST_URL): Update to OSDN host URL.

	* xml/profile.xml: Rename it as...
	* xml/profile.xml.in: ...this; replace hard-coded repository URL...
	(%PACKAGE_LIST_URL%/%F.xml.lzma): ...this template.

	* xml/setup.xml: Likewise, rename it as...
	* xml/setup.xml.in: ...this, with corresponding URL update.

	* Makefile.in (install-profile): Modify procedure, using...
	(%.xml: %.xml.in): ...this new pattern rule, to generate installed XML
	files, from source templates.

	* src/setup.rc (STRINGTABLE) <ID_DOWNLOAD_HOST_URI>: Remove trailing
	"?download" qualifier.

2020-06-11  Keith Marshall  <keith@users.osdn.me>

	Discontinue formal use of the build-aux submodule.

	* .gitmodules .hgsub: Files are obsolete; delete them.